samples/_failures_safe/1761128266_9fbd7a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e946e536.c: In function ‘display_compression_info’:
./samples/SAFE/__tmp_e946e536.c:146:9: error: expected expression at end of input
  146 |         printf("  Block %zu: Offset=%u, Size=%u, Level=%u, Checksum=0x%04X\n",
      |         ^~~~~~
./samples/SAFE/__tmp_e946e536.c:146:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e946e536.c:146:9: error: expected declaration or statement at end of input
